Réglage du bug empêchant l'ouverture de la fenêtre de mise à jour disponible lorsqu'il était impossible pour le programme de charger le module web de javafx